--- a/docs/캐싱 전략 설계.md
+++ b/docs/캐싱 전략 설계.md
@@ -7,7 +7,7 @@
 - 사용 목적
   - 성능 향상
   - 부하 감소
-- 캐싱 전략
+- 캐싱 전략 후보
   - 메모리 캐시
   - 별도의 캐시 서비스
 - 캐싱 대상 
@@ -22,7 +22,7 @@
   - 토큰 (캐시 사용 X)
     - 대기열을 Redis로 변경하였고, 짧은 주기로 변경되는 데이터로 이번 캐싱에 적합하지 않음   
   - 콘서트 (일부 기능에 대해 캐시 사용 O)
-    - ``콘서트 조회``, ``콘서트 예약가능 날짜 조회``의 경우 비교적 변경이 적고, 콘서트 예약 시스템이므로 가장 잦은 요청이 들어오는 조회로 캐싱 대상으로 적합함
+    - ``콘서트 조회``, ``콘서트 예약가능 날짜 조회``의 경우 비교적 변경이 적고, 콘서트 예약 시스템이므로 가장 잦은 요청이 들어오는 조회로 캐싱 대상으로 적합함 (TTL → 10분으로 설정)
     - ``콘서트 좌석 조희``의 경우 실시간으로 좌석 선점이 발생하기 때문에 잦은 변경이 생기고 캐싱하여 관리하기 어려운 부분이 있어 캐싱에 적합하지 않음
   - 예약 / 결제 / 포인트 (캐시 사용 X)
     - 사용자별로 가지고 있는 정보이므로 캐싱을 하게 되더라도 크게 성능 향상을 기대하기 어렵고 개인정보가 포함될 수 있는 데이터로 민감할 수 있음
@@ -31,3 +31,10 @@
   - Redis를 사용해 Cache 처리
       - 분산 환경을 고려할 때 중앙 집중식 관리 및 사용이 가능함
       - 캐싱 대상으로 잡은 데이터(콘서트, 콘서트 스케줄)는 모든 서버에서 동일한 값을 제공받아야 함
+
+### 캐싱 사용 전후 성능 비교
+구분 | 콘서트 조회 | 콘서트 스케줄 조회
+----|----------|---------------
+캐시 X | 8.5ms | 6.75ms
+캐시 O | 4.5ms | 4.5ms
+- 데이터 수가 많지는 않았지만 약 5회 가량 반복 테스트를 했을 때, 캐시가 적용된 후 조회 성능(속도)이 개선되었음
