docs: 쿼리 성능 개선 - 인덱스.md 수정

--- a/docs/쿼리 성능 개선 - 인덱스.md
+++ b/docs/쿼리 성능 개선 - 인덱스.md
@@ -111,7 +111,7 @@
     ```
   
 
-- ``만료 대상 얘약 티켓의 좌석 조회`` (findAllByReservationIdIn)
+- ``만료 대상 예약 티켓의 좌석 조회`` (findAllByReservationIdIn)
     ```sql
     select
         rte1_0.id,
@@ -139,6 +139,9 @@
 
 ### 4. 인덱스 추가 및 성능 확인
 - ``콘서트 예약가능 날짜 조회`` → **복합 인덱스 사용**
+    - 단일 인덱스 존재 시, 실행 계획상 복합 인덱스를 타지 않음 → 복합 인덱스를 사용하기 위해 단일 인덱스 삭제
+    - 동일 콘서트 스케줄 데이터가 더 많아질수록 복합 인덱스를 통한 성능 개선 폭이 크다고 판단
+        - 현재는 cost, actual time의 차이가 두드러지는 편은 아니지만, 복합 인덱스의 cost가 다소 높고 actual time은 낮음 
     ```sql
     -- 단일 인덱스 (concert_id)
     create index idx_concert_id on concert_schedule (concert_id);
@@ -165,12 +168,10 @@
     -> Limit: 200 row(s)  (cost=2.06 rows=3) (actual time=0.0659..0.0779 rows=3 loops=1)
         -> Index range scan on cse1_0 using idx_concert_id_datetime over (concert_id = 3 AND '2024-08-10 01:25:00' < concert_datetime), with index condition: ((cse1_0.concert_id = 3) and (cse1_0.concert_datetime > TIMESTAMP'2024-08-10 01:25:00'))  (cost=2.06 rows=3) (actual time=0.063..0.0747 rows=3 loops=1)  
     ```
-  - 단일 인덱스 존재 시, 실행 계획상 복합 인덱스를 타지 않음 → 복합 인덱스를 사용하기 위해 단일 인덱스 삭제
-  - 동일 콘서트 스케줄 데이터가 더 많아질수록 복합 인덱스를 통한 성능 개선 폭이 크다고 판단
-    - 현재는 cost, actual time의 차이가 두드러지는 편은 아니지만, 복합 인덱스의 cost가 다소 높고 actual time은 낮음
-
 
 - ``콘서트 예약가능 좌석 조회`` → **단일 인덱스 사용**
+    - 좌석 상태(status)는 자주 바뀔 수 있는 값으로 인덱스 설정에 적합하지 않을 수 있음
+        - 추가로, 2가지 상태(AVAILABLE, OCCUPIED)만 가지므로 카디널리티가 낮아 인덱싱 효과가 크지 않음
     ```sql
     -- 단일 인덱스 (concert_schedule_id)
     create index idx_schedule_id on concert_seat (concert_schedule_id);
@@ -196,11 +197,10 @@
     -> Limit: 200 row(s)  (cost=25.3 rows=23) (actual time=0.0922..0.0998 rows=23 loops=1)
         -> Index lookup on cse1_0 using idx_schedule_id_status (concert_schedule_id=100000, status='AVAILABLE')  (cost=25.3 rows=23) (actual time=0.0899..0.0957 rows=23 loops=1)
     ```
-    - 좌석 상태(status)는 자주 바뀔 수 있는 값으로 인덱스 설정에 적합하지 않을 수 있음
-      - 추가로, 2가지 상태(AVAILABLE, OCCUPIED)만 가지므로 카디널리티가 낮아 인덱싱 효과가 크지 않음
-
-
+  
 - ``만료 대상 예약 조회`` → **복합 인덱스 사용**
+    - 상태나 예약 생성 일시 각각을 단일 인덱스로 설정할 경우, 상대적으로 유의미한 성능 개선을 하기 어려움
+    - 상태는 3가지 값(RESERVED, PAID, CANCELED)을 가지고 있어 카디널리티는 낮지만 필터링을 한 후, 예약 생성 일시를 활용하면 성능 개선에 더 효과적일 수 있음
     ```sql
     -- 복합 인덱스 (concert_id, concert_datetime)
     create index idx_rsv_status_created_at on reservation (status, created_at);
@@ -213,11 +213,9 @@
     -> Limit: 200 row(s)  (cost=402 rows=200) (actual time=0.0693..3.37 rows=200 loops=1)
         -> Index range scan on re1_0 using idx_rsv_status_created_at over (status = 'RESERVED' AND NULL < created_at < '2024-08-09 22:00:00'), with index condition: ((re1_0.`status` = 'RESERVED') and (re1_0.created_at < TIMESTAMP'2024-08-09 22:00:00'))  (cost=402 rows=581) (actual time=0.0614..3.35 rows=200 loops=1)
     ```
-    - 상태나 예약 생성 일시 각각을 단일 인덱스로 설정할 경우, 상대적으로 유의미한 성능 개선을 하기 어려움
-    - 상태는 3가지 값(RESERVED, PAID, CANCELED)을 가지고 있어 카디널리티는 낮지만 필터링을 한 후, 예약 생성 일시를 활용하면 성능 개선에 더 효과적일 수 있음 
-
 
 - ``만료 대상 예약 티켓의 좌석 조회`` → **단일 인덱스 사용**
+    - 쿼리의 조회 조건이 예약 ID이므로 단일 인덱스로 성능 개선 가능
     ```sql
     -- 단일 인덱스 (concert_id)
     create index idx_concert_id on concert_schedule (concert_id);
@@ -230,7 +228,6 @@
     -> Limit: 200 row(s)  (cost=9 rows=5) (actual time=0.0747..0.0922 rows=5 loops=1)
         -> Index range scan on rte1_0 using idx_ticket_reservation_id over (reservation_id = 1250423) OR (reservation_id = 1250424) OR (reservation_id = 1250425), with index condition: (rte1_0.reservation_id in (1250423,1250424,1250425))  (cost=9 rows=5) (actual time=0.0722..0.0894 rows=5 loops=1)
     ```
-    - 쿼리의 조회 조건이 예약 ID이므로 단일 인덱스로 성능 개선 가능
 
 ---
 
