docs: 쿼리 성능 개선 - 인덱스.md 수정

--- a/docs/쿼리 성능 개선 - 인덱스.md
+++ b/docs/쿼리 성능 개선 - 인덱스.md
@@ -181,8 +181,9 @@
     23 row(s) fetched - 1ms ~ 4ms
 
     [Explain Analyze 결과]  
-    -> Limit: 200 row(s)  (cost=25.3 rows=23) (actual time=0.129..0.137 rows=23 loops=1)
-        -> Index lookup on cse1_0 using idx_schedule_id_status (concert_schedule_id=100000, status='AVAILABLE')  (cost=25.3 rows=23) (actual time=0.0931..0.1 rows=23 loops=1)
+    -> Limit: 200 row(s)  (cost=50.4 rows=5) (actual time=0.192..0.212 rows=23 loops=1)
+        -> Filter: (cse1_0.`status` = 'AVAILABLE')  (cost=50.4 rows=5) (actual time=0.19..0.208 rows=23 loops=1)
+            -> Index lookup on cse1_0 using idx_schedule_id (concert_schedule_id=100000)  (cost=50.4 rows=50) (actual time=0.179..0.191 rows=50 loops=1)
   
   
   
@@ -218,7 +219,8 @@
     - 쿼리의 조회 조건이 예약 ID이므로 단일 인덱스로 성능 개선 가능
     ```sql
     -- 단일 인덱스 (concert_id)
-    create index idx_concert_id on concert_schedule (concert_id);
+    create index idx_ticket_reservation_id on reservation_ticket (reservation_id);
+
 
   
     [쿼리 실행 시간]
